﻿#2020.02.23
-Project Setup
#2020.02.24
-Implement Basic Rendering
#2020.02.29
-Refactor and remove obsolete code
#2020.03.03
-Implemented pre-made level loading
-Made test assets
-Added basic scrolling of level
#2020.03.06
-Changed rendering to isometric projection
#2020.03.09
-Spiresheet loading instead of single Sprites