@@ -1,0 +1,16 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace GameEngine
+{
+    interface IUpdateable
+    {
+        /// <summary>
+        /// Általános update függvény
+        /// </summary>
+        void update();
+    }
+}
