@@ -12,3 +12,4 @@
 -Changed rendering to isometric projection
 #2020.03.09
 -Spiresheet loading instead of single Sprites
+-Level and screen logic separated
